@@ -1,3 +1,11 @@
+2019-03-07  Jonathan Wakely  <jwakely@redhat.com>
+
+	P0356R5 Simplified partial function application
+	* include/std/functional [C++20] (_Bind_front, _Bind_front_t): Define
+	helpers for bind_front.
+	(bind_front, __cpp_lib_bind_front): Define.
+	* testsuite/20_util/function_objects/bind_front/1.cc: New test.
+
 2019-03-06  Jonathan Wakely  <jwakely@redhat.com>
 
 	* include/std/type_traits (__cpp_lib_bounded_array_traits): Define.
